src/modules/72-templates-library/components/TemplateDetails/TemplateDetails.module.scss
/*
 * Copyright 2022 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.container {
  position: relative;
  overflow-wrap: anywhere;
  overflow: auto;
  .shrink {
    flex-shrink: 1 !important;
  }
  .openInStudio {
    flex-shrink: 0;
  }
  .topContainer {
    p {
      --font-size: var(--form-input-font-size) !important;
    }
    :global {
      .DropDown--main {
        display: flex;
      }
      .DropDown--dropdownButton {
        background-color: var(--white) !important;
        column-gap: var(--spacing-4);
      }
    }
  }
  .tabsContainer {
    position: relative;
    flex-grow: 1;
    overflow: hidden;

    :global {
      .bp3-tabs {
        height: 100%;
      }
      .bp3-tab-panel {
        margin-top: 0px !important;
        height: calc(100% - 43px);
        overflow: auto;
      }
      .bp3-tab-list {
        background-color: var(--white);
        padding: 0 var(--spacing-xlarge);
        box-shadow: var(--elevation-2);
      }
      .bp3-tab {
        font-size: 12px !important;
        margin-right: var(--spacing-5) !important;
      }
    }
  }
  .gitCacheContainer {
    position: absolute;
    top: var(--spacing-small);
    right: var(--spacing-small);
  }
  .innerTabsContainer {
    flex-grow: 1;
    :global {
      .bp3-tab-panel {
        overflow: unset;
        height: auto;
      }
      .bp3-tab-list {
        border-top: 1px solid var(--grey-200);
        position: sticky;
        top: 0;
      }
    }
  }
  .dropdown {
    :global(.bp3-menu) {
      width: 300px !important;
    }
  }
}

.referencedByHeader {
  justify-content: flex-start !important;
}

.referencedByBody {
  height: unset !important;
  min-height: unset !important;
  display: flex;
  justify-content: center;
  flex-grow: 1;
  padding-bottom: var(--spacing-4) !important;

  :global(.NoDataCard--noDataCard) {
    height: unset !important;
    padding: var(--spacing-10) var(--spacing-8) 0 var(--spacing-8) !important;
  }
  :global(.NoDataCard--buttonContainer) {
    padding: 0 !important;
  }
  :global(.TableV2--table) {
    flex-grow: 1;
  }
}

.referencedByTab {
  height: calc(100% - 44px) !important;
  display: flex;
  flex-direction: column;
}

.errorPanel {
  padding: var(--spacing-large) 65px !important;
}

.errorHandler {
  margin-top: 10% !important;
}

.yamlLoader {
  min-height: 300px !important;
}
.versionListContainer {
  :global {
    .bp3-overlay {
      z-index: 30 !important;
    }
  }
}

.gitBtn {
  gap: var(--spacing-2) !important;
}

.cacheIcon {
  padding: var(--spacing-1) !important;
}

